# nanolink

./: Cargo.toml  README.md
migrations/: 001_create_url_mappings.sql  002_create_users.sql
src/: main.rs
src/auth/: jwt.rs  middleware.rs
src/handlers/: auth_handlers.rs  mod.rs  page_handlers.rs  url_handlers.rs
src/models/: mod.rs  url_mapping.rs  user.rs
src/templates/: base_styles.rs  home_template.rs  mod.rs  profile_template.rs  signin_template.rs  signup_template.rs
