[package]
name = "nanolink"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "macros", "uuid", "chrono"] }
dotenvy = "0.15"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
rand = "0.8"
anyhow = "1.0.98"
serde_json = "1.0"
axum = "0.8.4"
bcrypt = "0.15"
jsonwebtoken = "9.2"
